<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SearchMap</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="logout">Logout</string>
    <string name="count">Count</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="not_registered_yet">Not registered yet</string>
    <string name="register_here">Register here</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered</string>
    <string name="login_here">Login here</string>
    <string name="logo">Logo</string>
    <string name="back_arrow">Back Arrow</string>
</resources>