<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back_arrow"
        app:srcCompat="@drawable/ic_back_arrow" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_starbucks" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@color/teal_700"
            android:textSize="30sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/green"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/register"
            android:height="60dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvLoginHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/login_here"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>